# Abandabot

./: .gitignore  APPENDIX.md  README.md  evaluation.ipynb  pyproject.toml  survey_candidates_compressed.txt
abandabot/: __init__.py  __main__.py  codeql.py  context.py  evaluate.py  model.py  prompt.py  survey.py
output/: 0xCAF2_calcium-editor.json  0xfe_vexflow.json  10up_block-components.json  10up_simple-page-ordering.json  18F_18f.gsa.gov.json  18F_all_sorns.json  18xx-maker_18xx-maker.json  24HeuresINSA_Overbookd.json  2600hz_monster-ui.json  3dmol_3Dmol.js.json  A-l-y-l-e_Alyle-UI.json  A9T9_Kantu.json  AJStacy_Adze.json  APIs-guru_asyncapi-directory.json  Agoric_documentation.json  AiursoftWeb_AiurUI.json  Akryum_floating-vue.json  AzureAD_microsoft-authentication-library-for-js.json  Bielik20_nx-plugins.json  Binaryify_OneDark-Pro.json  BoLT_four.json  BoldGrid_boldgrid-editor.json  BrasilAPI_BrasilAPI.json  CATcher-org_CATcher.json  CDCgov_prime-simplereport-site.json  CTPUG_wafer.json  Codeinwp_wp-menu-icons.json  DEgITx_rats-search.json  DanielGodfrey-Dev_Mephisto.json  DesertFoxNV_ngx-autosize-input.json  Domogami_dominicklee.json  DreamworldSolutions_dw-dialog.json  EGroupware_egroupware.json  EPICLab_synectic.json  Elli360_Project3.json  Esri_calcite-ui-icons.json  FAMNM_famnm-website.json  FHIR_GoFSH.json  FKLC_WhatsAppToDiscord.json  FMCorz_moodle-block_xp.json  (+1168 more)
qualtric-cache/: 0b5vr_three-vrm-inspector.json  1-Platform_one-platform.json  10up_ElasticPress.json  10up_Engineering-Best-Practices.json  10up_classifai.json  10up_distributor.json  11ways_alchemy.json  18F_identity-idp.json  1j01_jspaint.json  25Karma_25karma.github.io.json  4GeeksAcademy_website-v2.json  5e-bits_5e-srd-api.json  75lb_command-line-args.json  A-Kasaaian_react-advance-jalaali-datepicker.json  AElfProject_aelf-sdk.js.json  Aam-Digital_ndb-core.json  AdonisJs_adonis-validation-provider.json  AlaskaAirlines_WebCoreStyleSheets.json  Azure_k8s-deploy.json  ChainSafe_js-libp2p-gossipsub.json  DTStack_ant-design-dtinsight-theme.json  Flagsmith_flagsmith-js-client.json  Fliplet_fliplet-cli.json  FoodIsLifeBGP_banana-admin.json  FreemapSlovakia_freemap-v3-api.json  Freemius_wordpress-sdk.json  GDGVIT_triton-web.json  GMOD_cram-js.json  GMOD_tabix-js.json  GSA_digitalgov-pra.json  GSA_plainlanguage.gov.json  (+639 more)
(+3 files in other folders)
