[project]
name = "abandabot"
version = "0.1.0"
description = "Your intelligent assistant that monitors and responds to abandoned dependencies"
authors = [{ name = "Hao He", email = "haohe@andrew.cmu.edu" }]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = ["pandas (>=2.2.3,<3.0.0)"]

[tool.abandabot]
codeql-path = "codeql"
codeql-cli-path = "codeql/codeql"
codeql-db-path = "codeql-dbs"
repo-path = "repos"
report-path = "reports"

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
