[project]
name = "abandabot"
version = "0.1.0"
description = "An intelligent assistant that evaluates abandoned dependencies"
authors = [{ name = "Hao He", email = "haohe@andrew.cmu.edu" }]
readme = "README.md"
requires-python = ">=3.11,<4.0"
license = { text = "Apache-2.0" }
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "langchain (>=0.3.17,<0.4.0)",
    "langchain-openai (>=0.3.3,<0.4.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "langchain-fireworks (>=0.2.7,<0.3.0)",
    "pymongo (>=4.11.1,<5.0.0)",
    "langchain-anthropic (>=0.3.7,<0.4.0)",
    "langchain-google-vertexai (>=2.0.13,<3.0.0)",
]

[tool.abandabot]
codeql-path = "codeql"
codeql-cli-path = "codeql/codeql"
codeql-db-path = "codeql-dbs"
repo-path = "repos"
report-path = "reports"
mongo-uri = "mongodb://localhost:27020/"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
